refactor: change on warehouseTest, Delivery functions, getFirst added.